track - remove bg seperation orbs; fix overflow bugs

--- a/plugins/track/style.scss
+++ b/plugins/track/style.scss
@@ -4,9 +4,6 @@ body, html {
   padding: 0;
   margin: 0;
 
-  max-width: 100%;
-  overflow-x: hidden;
-
   font-family: "Inter Tight", "Inter", "Helvetica", sans-serif;
 }
 
@@ -80,7 +77,6 @@ body, html {
                     }
                 }
 
-                margin-left: 1em;
             }
         }
 
@@ -124,37 +120,16 @@ body, html {
 #opener-texts-wrapper {
   // debug
   // background: blue;
-  float: right;
   width: 50%;
 
   color: white;
 
   align-self: center;
   margin-bottom: 4em;
+  overflow: hidden;
 
-  &::before {
-  content: "";
-
-  /*
-  background: radial-gradient(
-    circle,
-    rgba(0, 0, 0, 0.0) 0%,
-    rgba(0, 0, 0, 0.9) 50%,
-    rgba(0, 0, 0, 0.0) 100%
-  );*/
-
-  background: radial-gradient(ellipse at center, hsla(0, 0%, 0%, 0.3) 0%, hsla(0, 0%, 0%, 0.02) 50%, hsla(0, 0%, 0%, 0) 70%);
-  transform: scale(2);
-
-  position: absolute;
-  top: 12%;
-  left: 40%;
-  width: 50em;
-  height: 300px;
-
-z-index: -1;
-  pointer-events: none;
-  } 
+  position: relative;
+  padding: 2em;
 }
 
 #this-is-track {
@@ -237,21 +212,6 @@ z-index: -1;
   .container {
     width: 100%;
     font-size: 0.75em;
-
-      &::before {
-        content: "";
-        position: absolute;
-        inset: -1em;
-        margin-top: 9em;
-        background: radial-gradient(
-          ellipse 150% 60%,
-          rgba(0, 0, 0, 0.60) 0%,
-          rgba(0, 0, 0, 0.05) 40%,
-          rgba(0, 0, 0, 0.0) 70%
-        );
-        z-index: -1;
-        pointer-events: none;
-      }
   }
 
   #opener-texts-wrapper {
@@ -259,10 +219,12 @@ z-index: -1;
     text-align: center;
 
     position: absolute;
-    width: 100%;
+    width: 80%;
     top: calc(34em + 50px);
+    left: 50%;
+    transform: translateX(-50%);
     // margin: 0em 0 -10em 0em;
-    margin: 0; 
+    margin: auto; 
 
     #slogan {
       width: 10em;
